2003-02-06  Caleb Moore <c.moore@student.unsw.edu.au>
	* rsvg-filter.c: made gassian blur use 3 box blurs (technically 6 motion blurs) when the geometric mean of the standard deviations of the filter is over two. Misc enhancements in feConvolveMatrix
	
2003-02-05  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-filter.c: Made colormatrix a lot safer, added checking to make sure colvolvematrix doesn't segfault, fixed embarrasing little buglet in feOffset.
	* rsvg-filter.c: fixed table in feComponantTransfer, I won't pretend to know how I did it. It truely is an aweful hack, but its the best we have and it seems to work as per the examples
	
2003-02-04  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-filter.c: Fix bug in pixbuf_get_alpha(), speed up pixbuf_new_cleared(),
	be more paranoid in ComponentTransfer
	
2003-02-04  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-filter.c: Implemented the feMorphology filter

2003-02-04  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-filter.c: Implemented the ComponentTransfer filter, it works properly now
	
2003-02-03  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-filter.[ch]: Start implementing ComponentTransfer filter
	Indent, make code ansi-compliant.
	* rsvg-css.[ch]: Tweak VBOX parsing, free unused string array properly


2003-02-03  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-filter.c: Implemented ColorMatrix filter, Made GaussianBlur scaled according to the current coordinate system
	* rsvg-css.c: Added \n to the types of whitespace that splits arguments in list
	
2003-02-02  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-filter.c: Implemented Merge filter, implemented Offset filter

2003-02-01  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-filter.c: Implemented ConvolveMatrix filter
	
2003-02-01  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-syles.c: implemented filter groups using the same code as the opacity grops