@@ -1,4 +1,11 @@
+2003-02-07  Dom Lachowicz <cinamod@hotmail.com>
+
+	* rsvg-styles.[ch]: Implement get_font_size() function
+	* rsvg-shapes.c: Use the above fn
+	* rsvg-filter.c: Ditto
+	
 2003-02-06  Caleb Moore <c.moore@student.unsw.edu.au>
+
 	* rsvg-filter.c: made gassian blur use 3 box blurs (technically 6 motion blurs) when the geometric mean of the standard deviations of the filter is over two. Misc enhancements in feConvolveMatrix
 	
 2003-02-05  Caleb Moore <c.moore@student.unsw.edu.au>
